[package]
name = "metality_game_contract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
solana-program = "1.10.3"
spl-token = { version = "3.3.0", features = ["no-entrypoint"] }
thiserror = "1.0.30"
arrayref = "0.3.6"
spl-associated-token-account = { version = "1.0.5", features = ["no-entrypoint"] }

[dev-dependencies]
solana-sdk = "1.10.3"
solana-program-test = "1.10.3"
tokio = { version = "1.17.0", features = ["full"]}

[lib]
crate-type = ["cdylib", "lib"]
